--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.25.2",
+    "dayjs": "^1.11.5",
+    "echarts": "^5.4.0",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
@@ -23,6 +25,7 @@
     "path-to-regexp": "2.4.0",
     "uuid": "^9.0.0",
     "vue": "2.6.10",
+    "vue-echarts": "^6.2.3",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "vuex-persistedstate": "3.2.1"
