--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "core-js": "^3.25.2",
     "dayjs": "^1.11.5",
     "echarts": "^5.4.0",
+    "element-china-area-data": "^5.0.2",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "uuid": "^9.0.0",
+    "v-distpicker": "^1.3.3",
     "vue": "2.6.10",
     "vue-echarts": "^6.2.3",
     "vue-router": "3.0.6",
